bsic: GPLv3 -> GPL-3
As said by cabal:
Warning: 'license: GPLv3' is not a recognised license. The known licenses are:
GPL, GPL-2, GPL-3, LGPL, LGPL-2.1, LGPL-3, AGPL, AGPL-3, BSD2, BSD3, MIT, ISC,
MPL-2.0, Apache, Apache-2.0, PublicDomain, AllRightsReserved, OtherLicense

--- a/util/bsic/bsic.cabal
+++ b/util/bsic/bsic.cabal
@@ -33,7 +33,7 @@ version:             0.1.0.0
 homepage:            https://github.com/XeCycle/bamboo-shoot3
 
 -- The license under which the package is released.
-license:             GPLv3
+license:             GPL-3
 
 -- The file containing the license text.
 -- license-file:        LICENSE
