pbss: support for std::tuple
Close #1.

--- a/test/pbss/CMakeLists.txt
+++ b/test/pbss/CMakeLists.txt
@@ -21,7 +21,7 @@
 pbs_deftest(test-serialize-primitive)
 pbs_deftest(test-parse-primitive)
 pbs_deftest(test-serialize-parse-enum)
-pbs_deftest(test-serialize-parse-pair)
+pbs_deftest(test-serialize-parse-stdtuple)
 pbs_deftest(test-serialize-parse-var-uint)
 pbs_deftest(test-serialize-iterable)
 pbs_deftest(test-parse-container)
@@ -32,7 +32,7 @@ pbs_deftest(test-size-helpers)
 
 pbs_deftest(test-size-primitive)
 pbs_deftest(test-size-enum)
-pbs_deftest(test-size-pair)
+pbs_deftest(test-size-stdtuple)
 pbs_deftest(test-size-var-uint)
 pbs_deftest(test-size-iterable)
 pbs_deftest(test-size-struct)
