pbsf: add LZ4HC compression

--- a/test/pbsf/CMakeLists.txt
+++ b/test/pbsf/CMakeLists.txt
@@ -33,6 +33,7 @@ pbs_deftest(test-write-iterator)
 pbs_deftest(test-encode-block-default)
 pbs_deftest(test-encode-block-lzo)
 pbs_deftest(test-encode-block-lz4)
+pbs_deftest(test-encode-block-lz4hc)
 pbs_deftest(test-encode-block-identity)
 pbs_deftest(test-encode-block-unknown)
 
