build: build type Optdebug
Native + -g

For `perf report` to display corresponding source code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,12 @@ set(CMAKE_CXX_FLAGS_NATIVE "${CMAKE_CXX_FLAGS_RELEASE} -march=native -mtune=nati
 set(CMAKE_C_FLAGS_NATIVE "${CMAKE_C_FLAGS_RELEASE} -march=native -mtune=native"
   CACHE STRING "" FORCE)
 
+# optimized debug
+set(CMAKE_CXX_FLAGS_OPTDEBUG "${CMAKE_CXX_FLAGS_NATIVE} -g"
+  CACHE STRING "" FORCE)
+set(CMAKE_C_FLAGS_OPTDEBUG "${CMAKE_C_FLAGS_NATIVE} -g"
+  CACHE STRING "" FORCE)
+
 # AVX_release
 set(CMAKE_CXX_FLAGS_AVX_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -mavx"
   CACHE STRING "" FORCE)
