build: enable strict aliasing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,14 +30,14 @@ set(PROJECT_VERSION_MAJOR ${BambooShoot3_VERSION})
 set(BambooShoot3_BUILD_CXXSTD_FLAGS "-std=c++11"
   CACHE STRING "Flag for specifying language standard")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${BambooShoot3_BUILD_CXXSTD_FLAGS} -fno-strict-aliasing -Wpedantic -Wall -Wextra -Wconversion -Werror")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${BambooShoot3_BUILD_CXXSTD_FLAGS} -Wpedantic -Wall -Wextra -Wconversion -Werror")
 
 # external deps
 set(DEPS_LZO_PATH ${PROJECT_SOURCE_DIR}/deps/lzo)
 set(DEPS_LZ4_PATH ${PROJECT_SOURCE_DIR}/deps/lz4)
 
 # tests
-set(CMAKE_CXX_FLAGS_TESTING "-msse4.2 -g"
+set(CMAKE_CXX_FLAGS_TESTING "-msse4.2 -g -fstrict-aliasing"
   CACHE STRING "" FORCE)
 set(CMAKE_C_FLAGS_TESTING "-msse4.2 -g"
   CACHE STRING "" FORCE)
