ci: test with devtoolset-4

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ env:
   - TASK=clang-jessie
   - TASK=cent6-devts3
   - TASK=cent7-devts3
+  - TASK=cent6-devts4
+  - TASK=cent7-devts4
   - TASK=bsic
 
 script: ./ci-tasks/run.sh
