add dependency of gipfeli
1. add gipfeli source into dep
2. add wrapper code for gipfeli encoding/deconding
3. add test code for gipfeli wrapper

--- a/src/pbsf/CMakeLists.txt
+++ b/src/pbsf/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-#   Copyright 2016 Carl Lei
+#   Copyright 2016 Carl Lei, Xun Chen
 #
 #   This file is part of Bamboo Shoot 3.
 #
@@ -17,14 +17,20 @@
 #   along with Bamboo Shoot 3.  If not, see <http://www.gnu.org/licenses/>.
 #
 #   Carl Lei <xecycle@gmail.com>
+#   Xun Chen <xun.gmail.com>
 
 include_directories(${DEPS_LZO_PATH})
 include_directories(${DEPS_LZ4_PATH}/lib)
+include_directories(${DEPS_GIPFELI_PATH})
 
 set(PBSF_SOURCES
   data-block.cc crc-32.cc
   ${DEPS_LZO_PATH}/minilzo.c lzo-wrap.cc
-  ${DEPS_LZ4_PATH}/lib/lz4.c ${DEPS_LZ4_PATH}/lib/lz4hc.c lz4-wrap.cc)
+  ${DEPS_LZ4_PATH}/lib/lz4.c ${DEPS_LZ4_PATH}/lib/lz4hc.c lz4-wrap.cc
+  ${DEPS_GIPFELI_PATH}/decompress.cc ${DEPS_GIPFELI_PATH}/entropy.cc ${DEPS_GIPFELI_PATH}/entropy_code_builder.cc ${DEPS_GIPFELI_PATH}/lz77.cc ${DEPS_GIPFELI_PATH}/gipfeli-internal.cc gipfeli-wrap.cc)
+
+set_source_files_properties(${DEPS_GIPFELI_PATH}/decompress.cc ${DEPS_GIPFELI_PATH}/entropy.cc ${DEPS_GIPFELI_PATH}/entropy_code_builder.cc ${DEPS_GIPFELI_PATH}/lz77.cc ${DEPS_GIPFELI_PATH}/gipfeli-internal.cc gipfeli-wrap.cc PROPERTIES COMPILE_FLAGS "-Wno-strict-aliasing -Wno-extra -Wno-conversion -Wno-sign-compare")
+
 add_library(pbsf STATIC ${PBSF_SOURCES})
 add_library(pbsf_s SHARED ${PBSF_SOURCES})
 set_target_properties(pbsf_s PROPERTIES SOVERSION 2)
