remove lz4 to resolve the conflict in xxhash

--- a/src/pbsf/CMakeLists.txt
+++ b/src/pbsf/CMakeLists.txt
@@ -20,7 +20,7 @@
 #   Xun Chen <xun.gmail.com>
 
 include_directories(${DEPS_LZO_PATH})
-include_directories(${DEPS_LZ4_PATH}/lib)
+#include_directories(${DEPS_LZ4_PATH}/lib)
 include_directories(${DEPS_GIPFELI_PATH})
 include_directories(${DEPS_ZSTD_PATH}/lib ${DEPS_ZSTD_PATH}/lib/common)
 
@@ -33,7 +33,6 @@ set(PBSF_SOURCES
   data-block.cc crc-32.cc
   ${DEPS_LZO_PATH}/minilzo.c lzo-wrap.cc
   #  ${DEPS_LZ4_PATH}/lib/lz4.c ${DEPS_LZ4_PATH}/lib/lz4hc.c lz4-wrap.cc
-  lz4-wrap.cc
   ${DEPS_GIPFELI_PATH}/decompress.cc ${DEPS_GIPFELI_PATH}/entropy.cc ${DEPS_GIPFELI_PATH}/entropy_code_builder.cc ${DEPS_GIPFELI_PATH}/lz77.cc ${DEPS_GIPFELI_PATH}/gipfeli-internal.cc gipfeli-wrap.cc
   zstd-wrap.cc)
 
@@ -41,14 +40,14 @@ set_source_files_properties(${DEPS_GIPFELI_PATH}/decompress.cc ${DEPS_GIPFELI_PA
 
 set_source_files_properties(zstd-wrap.cc PROPERTIES COMPILE_FLAGS "-Wno-error=conversion -Wno-conversion")
 
-add_library(lz4_static STATIC ${DEPS_LZ4_PATH}/lib/lz4.c ${DEPS_LZ4_PATH}/lib/lz4hc.c)
+#add_library(lz4_static STATIC ${DEPS_LZ4_PATH}/lib/lz4.c ${DEPS_LZ4_PATH}/lib/lz4hc.c)
 
 add_library(zstd_static STATIC ${ZSTD_COMMON_FILES} ${ZSTD_COMPRESS_FILES} ${ZSTD_DECOMPRESS_FILES} ${ZSTD_DICTBUILDER_FILES})
 
 add_library(pbsf STATIC ${PBSF_SOURCES})
-target_link_libraries(pbsf lz4_static zstd_static)
-#add_library(pbsf_s SHARED ${PBSF_SOURCES})
-#set_target_properties(pbsf_s PROPERTIES SOVERSION 2)
+target_link_libraries(pbsf zstd_static)
+add_library(pbsf_s SHARED ${PBSF_SOURCES})
+set_target_properties(pbsf_s PROPERTIES SOVERSION 2)
 
 install(TARGETS pbsf pbsf_s
   ARCHIVE DESTINATION lib
