--- a/src/pbsf/CMakeLists.txt
+++ b/src/pbsf/CMakeLists.txt
@@ -34,7 +34,7 @@ set(PBSF_SOURCES
   ${DEPS_LZO_PATH}/minilzo.c lzo-wrap.cc
   #  ${DEPS_LZ4_PATH}/lib/lz4.c ${DEPS_LZ4_PATH}/lib/lz4hc.c lz4-wrap.cc
   ${DEPS_GIPFELI_PATH}/decompress.cc ${DEPS_GIPFELI_PATH}/entropy.cc ${DEPS_GIPFELI_PATH}/entropy_code_builder.cc ${DEPS_GIPFELI_PATH}/lz77.cc ${DEPS_GIPFELI_PATH}/gipfeli-internal.cc gipfeli-wrap.cc
-  zstd-wrap.cc)
+  ${ZSTD_COMMON_FILES} ${ZSTD_COMPRESS_FILES} ${ZSTD_DECOMPRESS_FILES} ${ZSTD_DICTBUILDER_FILES} zstd-wrap.cc)
 
 set_source_files_properties(${DEPS_GIPFELI_PATH}/decompress.cc ${DEPS_GIPFELI_PATH}/entropy.cc ${DEPS_GIPFELI_PATH}/entropy_code_builder.cc ${DEPS_GIPFELI_PATH}/lz77.cc ${DEPS_GIPFELI_PATH}/gipfeli-internal.cc gipfeli-wrap.cc PROPERTIES COMPILE_FLAGS "-Wno-strict-aliasing -Wno-extra -Wno-conversion -Wno-sign-compare")
 
@@ -42,10 +42,7 @@ set_source_files_properties(zstd-wrap.cc PROPERTIES COMPILE_FLAGS "-Wno-error=co
 
 #add_library(lz4_static STATIC ${DEPS_LZ4_PATH}/lib/lz4.c ${DEPS_LZ4_PATH}/lib/lz4hc.c)
 
-add_library(zstd_static STATIC ${ZSTD_COMMON_FILES} ${ZSTD_COMPRESS_FILES} ${ZSTD_DECOMPRESS_FILES} ${ZSTD_DICTBUILDER_FILES})
-
 add_library(pbsf STATIC ${PBSF_SOURCES})
-target_link_libraries(pbsf zstd_static)
 add_library(pbsf_s SHARED ${PBSF_SOURCES})
 set_target_properties(pbsf_s PROPERTIES SOVERSION 2)
 
