--- a/util/bsic/bsic.cabal
+++ b/util/bsic/bsic.cabal
@@ -64,9 +64,9 @@ executable bsic
   other-modules:       PBS.BSIParse PBS.BSIGenCC PBS.Utils
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.8 && <4.9, parsec >=3.1.9 && <3.1.10,
-                       containers >=0.5.6 && <0.5.7, file-embed ==0.0.9.*,
-                       bytestring ==0.10.6.*
+  build-depends:       base >=4.9, parsec >=3.1.11,
+                       containers >=0.5.7 && <0.5.8, file-embed ==0.0.10.*,
+                       bytestring ==0.10.8.*
 
   -- Base language which the package is written in.
   default-language:    Haskell2010
