update the cirrus config and project config
1. attempt to use the extend image of gcc with cmake
2. update project version to r8 (in CMakeLists.txt)
3. change the standard c++ version to 14.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,7 +1,7 @@
 task:
   container:
     matrix:
-      image: gcc:6
+      image: rikorose/gcc-cmake:6
   compile_script:
     - mkdir build && cd build
     - cmake -DCMAKE_BUILD_TYPE=Testing ..
