update readme, add gcc 5 and 7 build in cirrus.yml

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,7 +1,9 @@
 task:
   container:
     matrix:
+      image: gcc:5
       image: gcc:6
+      image: gcc:7
   prepare_script:
     - apt update && apt install cmake -y
   compile_script:
