using GNUInstallDirs to control the install destination

--- a/src/pbsf/CMakeLists.txt
+++ b/src/pbsf/CMakeLists.txt
@@ -42,5 +42,5 @@ add_library(pbsf_s SHARED ${PBSF_SOURCES} $<TARGET_OBJECTS:zstd>)
 set_target_properties(pbsf_s PROPERTIES SOVERSION 3)
 
 install(TARGETS pbsf pbsf_s
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib)
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
